menu alignment fix + header center alignment improved

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -25,6 +25,7 @@ body {
   z-index: 20000;
   display: flex;          
   align-items: center;   
+  height: 100%;
 }
 
 .menu-btn {
